truncate fixed

--- a/style.css
+++ b/style.css
@@ -90,8 +90,8 @@ body {
     display: flex;
     align-items: center;
     height: 32px;
-    white-space: nowrap;
-    overflow-x: scroll;
+    /* white-space: nowrap; */
+    /* overflow-x: scroll; */
 }
 
 .bg-bold {
@@ -134,19 +134,21 @@ body {
     font-weight: 700;
     font-size: 14px;
     background: rgba(47, 77, 137, 0.1);
-    flex: 0 0 60px;
+    flex: 0 0 50px;
     line-height: 32px;
     text-align: center;
 }
 
 .team-name1 {
     text-align: right;
-    padding: 0 10px;
-    flex: 0 0 150px;
 }
 
+.team-name1,
 .team-name2 {
-    flex: 0 0 160px;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    flex: 1;
     padding: 0 10px;
 }
 
